--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "pdf",
+  "name": "react-pdf-viewer",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
+    "@react-pdf-viewer/core": "^3.1.0",
+    "@react-pdf-viewer/default-layout": "^3.1.0",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1",
+    "bootstrap": "^5.1.3",
+    "pdfjs-dist": "^2.12.313",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
